--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=WebAPIMonofia;Integrated Security=True;Trust Server Certificate = True"
+  },
+
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
